# aegis-shield

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
aegis_shield/: __init__.py  app.py  cache.py  config.py  dashboard.py  gateway.py  limiter.py  models.py  store.py
aegis_shield/scanners/: __init__.py  injection.py  output.py  pii.py
docs/: attack-examples.md  benchmarks.md  threat-model.md
tests/: __init__.py  test_app.py  test_cache.py  test_gateway.py  test_injection.py  test_limiter.py  test_output.py  test_pii.py  test_proxy.py
